2008-10-23  Adam Barth  <abarth@webkit.org>

        Reviewed by Sam Weinig.

        https://bugs.webkit.org/show_bug.cgi?id=21787

        Add test coverage for postMessaging from a data URL.

        * http/tests/security/postMessage/data-url-sends-null-origin-expected.txt: Added.
        * http/tests/security/postMessage/data-url-sends-null-origin.html: Added.

2008-10-22  Cameron Zwarich  <zwarich@apple.com>

        Reviewed by Kevin McCullough.

        Check in changed test results for r37792.

        * fast/dom/Window/window-properties-expected.txt:

2008-10-22  David Smith  <catfish.man@gmail.com>

        Reviewed by andersca.
        
        https://bugs.webkit.org/show_bug.cgi?id=19974
        getElementsByClassName not live enough

        * fast/dom/getElementsByClassName/015-expected.txt: Added.
        * fast/dom/getElementsByClassName/015.html: Added.

2008-10-22  Brady Eidson  <beidson@apple.com>

        Reviewed by Adam Roben

        <rdar://6261773> - autocomplete="off" doesn't work on Windows

        Remove a skipped test that can now pass with proper DRT support
        
        * platform/win/Skipped: Remove security/autocomplete-cleared-on-back.html

2008-10-22  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Dave Hyatt
        
        Moved tests from css3 to animations/transforms directories.

        * animations/change-keyframes-expected.txt: Renamed from LayoutTests/css3/change-keyframes-expected.txt.
        * animations/change-keyframes.html: Renamed from LayoutTests/css3/change-keyframes.html.
        * animations/keyframes-rule-expected.txt: Renamed from LayoutTests/css3/keyframes-rule-expected.txt.
        * animations/keyframes-rule.html: Renamed from LayoutTests/css3/keyframes-rule.html.
        * transforms/transform-value-types-expected.txt: Renamed from LayoutTests/css3/transform-value-types-expected.txt.