@@ -1,3 +1,12 @@
+2008-10-23  Alexey Proskuryakov  <ap@webkit.org>
+
+        Reviewed by Maciej Stachowiak.
+
+        Fix fast/events/message-port.html to not be timing-dependent (it was failing on some bots).
+
+        * fast/events/message-port.html:
+        * fast/events/message-port-expected.txt:
+
 2008-10-23  Adam Barth  <abarth@webkit.org>
 
         Reviewed by Sam Weinig.
